package observer.Button_Activity;

public interface ButtonClickListener {
    void onClick(int clickButton);
}
